--- a/index.html
+++ b/index.html
@@ -5,35 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS -->
-    <link
-      href="src/dist/bootstrap-5.1.3/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+    <link href="./src/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
     <!-- Custom CSS -->
-    <link href="src/css/custom.min.css" rel="stylesheet" />
+    <link href="./src/css/custom.min.css" rel="stylesheet" />
+
+    <!-- Twemoji -->
+    <link rel="stylesheet" href="src/libs/twemoji/twemoji-awesome.css" />
+
+    <!-- lottie-player -->
+    <script src="./src/libs/lottie/lottie-player.js"></script>
 
     <title>F9 - Simple Portofolio</title>
   </head>
   <body>
     <!-- navbar -->
-    <!-- <nav class="navbar navbar-light bg-transparent">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img
-            src="src/img/me.png"
-            alt=""
-            width="70"
-            class="d-inline-block align-text-top"
-          />
-          <span class="navbar__logo-title"> &#60;fsembilan &#47;&#62; </span>
-        </a>
-      </div>
-    </nav> -->
-
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent" id="home">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -45,22 +33,63 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0 navbar-nav-scroll">
-            <li class="nav-item">
+        <div
+          class="collapse navbar-collapse my-3"
+          id="navbarToggleExternalContent"
+        >
+          <ul class="navbar-nav mx-auto mb-2 mb-lg-0 navbar-nav-scroll">
+            <li class="nav-item navbar__menu">
               <a class="nav-link" href="#home">Home</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item navbar__menu">
               <a class="nav-link" href="#skills">Skills</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item navbar__menu">
               <a class="nav-link" href="#projects">Projects</a>
+            </li>
+            <li class="nav-item navbar__menu">
+              <a class="nav-link" href="#aboutme">About Me</a>
+            </li>
+            <li class="nav-item navbar__menu">
+              <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <script src="src/dist/bootstrap-5.1.3/js/bootstrap.bundle.min.js"></script>
+    <!-- greeting -->
+    <div class="greet container-fluid overflow-hidden">
+      <div class="my-auto">
+        <h1 class="greet__title">Hello world! <i class="twa twa-wave"></i></h1>
+        <h1 class="greet__name">I'm Ferdiyan.</h1>
+        <h3 class="greet__subtitle">
+          I'm a Code Enthusiast. <i class="twa twa-laptop-computer"></i>
+        </h3>
+        <a
+          class="btn greet__btn"
+          href="./src/documents/CV-ferdiyan-syah.pdf"
+          target="_blank"
+          >View CV</a
+        >
+      </div>
+      <div class="greet__img my-auto">
+        <lottie-player
+          src="https://assets4.lottiefiles.com/packages/lf20_dfdpp4st.json"
+          background="transparent"
+          speed="1"
+          loop
+          autoplay
+        ></lottie-player>
+      </div>
+    </div>
+
+    <!-- about-me -->
+    <div class="container">
+      <div class="flex"></div>
+    </div>
+
+    <script src="./src/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="./src/libs/animejs/anime.min.js"></script>
   </body>
 </html>
