--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <link rel="shortcut icon" href="src/assets/icon.png" type="image/x-icon" />
+
     <!-- Bootstrap CSS -->
     <link href="./src/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+
+    <!-- bootstrap icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+    />
+
+    <link rel="stylesheet" href="src/libs/aos/aos.css" />
 
     <!-- Custom CSS -->
     <link href="./src/css/custom.min.css" rel="stylesheet" />
@@ -39,19 +49,19 @@
         >
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0 navbar-nav-scroll">
             <li class="nav-item navbar__menu">
-              <a class="nav-link" href="#home">Home</a>
+              <a class="nav-link nav__scroll" href="#home">Home</a>
             </li>
             <li class="nav-item navbar__menu">
-              <a class="nav-link" href="#skills">Skills</a>
+              <a class="nav-link nav__scroll" href="#aboutme">About Me</a>
             </li>
             <li class="nav-item navbar__menu">
-              <a class="nav-link" href="#projects">Projects</a>
+              <a class="nav-link nav__scroll" href="#skills">Skills</a>
             </li>
             <li class="nav-item navbar__menu">
-              <a class="nav-link" href="#aboutme">About Me</a>
+              <a class="nav-link nav__scroll" href="#projects">Projects</a>
             </li>
             <li class="nav-item navbar__menu">
-              <a class="nav-link" href="#contact">Contact</a>
+              <a class="nav-link nav__scroll" href="#contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -60,12 +70,10 @@
 
     <!-- greeting -->
     <div class="greet container-fluid overflow-hidden">
-      <div class="my-auto">
+      <div class="my-auto" data-aos="fade-right" data-aos-duration="1500">
         <h1 class="greet__title">Hello world! <i class="twa twa-wave"></i></h1>
         <h1 class="greet__name">I'm Ferdiyan.</h1>
-        <h3 class="greet__subtitle">
-          I'm a Code Enthusiast. <i class="twa twa-laptop-computer"></i>
-        </h3>
+        <h3 class="greet__subtitle"></h3>
         <a
           class="btn greet__btn"
           href="./src/documents/CV-ferdiyan-syah.pdf"
@@ -73,7 +81,11 @@
           >View CV</a
         >
       </div>
-      <div class="greet__img my-auto">
+      <div
+        class="greet__img my-auto"
+        data-aos="fade-left"
+        data-aos-duration="1500"
+      >
         <lottie-player
           src="https://assets4.lottiefiles.com/packages/lf20_dfdpp4st.json"
           background="transparent"
@@ -85,11 +97,320 @@
     </div>
 
     <!-- about-me -->
-    <div class="container">
-      <div class="flex"></div>
+    <div class="container about-me overflow-hidden" id="aboutme">
+      <div
+        class="p-2 about-me__title"
+        data-aos="fade-up"
+        data-aos-duration="1500"
+        data-aos-once="true"
+      >
+        <h2 class="about-me__title--primary">Who Am I</h2>
+      </div>
+      <div class="about-me__content">
+        <div
+          class="p-2 about-me__content--img"
+          data-aos="slide-right"
+          data-aos-duration="1500"
+          data-aos-once="true"
+          data-aos-easing="ease-in-out"
+        >
+          <lottie-player
+            src="https://assets10.lottiefiles.com/packages/lf20_n3siiauc.json"
+            background="transparent"
+            speed="1"
+            loop
+            autoplay
+          ></lottie-player>
+        </div>
+        <div
+          class="p-2 about-me__content--excerpt"
+          data-aos="slide-left"
+          data-aos-duration="1500"
+          data-aos-once="true"
+          data-aos-easing="ease-in-out"
+        >
+          <p>
+            My name is Ferdian Syah, my friends usually call me ferdy. I am an
+            active college student of information systems study program at a
+            private university in Surabaya.
+          </p>
+          <p>
+            I am very interested in the world of application development or
+            coding. I like to learn new things in programming languages
+            especially when facing errors. for me, coding is a side art that
+            humans encounter in this world.
+          </p>
+        </div>
+      </div>
     </div>
 
+    <!-- skills -->
+    <div class="container skills" id="skills">
+      <div
+        class="p-2 skills__title"
+        data-aos="fade-down"
+        data-aos-duration="1500"
+        data-aos-once="true"
+      >
+        <h2 class="skills__title--primary">Skills</h2>
+      </div>
+      <div class="d-flex flex-wrap justify-content-evenly gap-3 mt-3">
+        <img
+          class="img-fluid img-thumbnail shadow-sm p-3"
+          src="src/assets/html.svg"
+          alt="html-5"
+          width="200"
+          data-aos="flip-up"
+          data-aos-duration="1500"
+          data-aos-once="true"
+        />
+        <img
+          class="img-fluid img-thumbnail shadow-sm p-3"
+          src="src/assets/css3.svg"
+          alt="html-5"
+          width="200"
+          data-aos="flip-right"
+          data-aos-duration="1500"
+          data-aos-once="true"
+        />
+        <img
+          class="img-fluid img-thumbnail shadow-sm p-3"
+          src="src/assets/javascript.svg"
+          alt="html-5"
+          width="200"
+          data-aos="flip-down"
+          data-aos-duration="1500"
+          data-aos-once="true"
+        />
+        <img
+          class="img-fluid img-thumbnail shadow-sm p-3"
+          src="src/assets/laravel.svg"
+          alt="html-5"
+          width="200"
+          data-aos="flip-left"
+          data-aos-duration="1500"
+          data-aos-once="true"
+        />
+        <img
+          class="img-fluid img-thumbnail shadow-sm p-3"
+          src="src/assets/codeigniter.svg"
+          alt="html-5"
+          width="200"
+          data-aos="flip-up"
+          data-aos-duration="1500"
+          data-aos-once="true"
+        />
+        <img
+          class="img-fluid img-thumbnail shadow-sm p-3"
+          src="src/assets/react.svg"
+          alt="html-5"
+          width="200"
+          data-aos="flip-right"
+          data-aos-duration="1500"
+          data-aos-once="true"
+        />
+        <img
+          class="img-fluid img-thumbnail shadow-sm p-3"
+          src="src/assets/git.svg"
+          alt="html-5"
+          width="200"
+          data-aos="flip-down"
+          data-aos-duration="1500"
+          data-aos-once="true"
+        />
+        <img
+          class="img-fluid img-thumbnail shadow-sm p-3"
+          src="src/assets/npm.svg"
+          alt="html-5"
+          width="200"
+          data-aos="flip-left"
+          data-aos-duration="1500"
+          data-aos-once="true"
+        />
+        <img
+          class="img-fluid img-thumbnail shadow-sm p-3"
+          src="src/assets/figma.svg"
+          alt="html-5"
+          width="200"
+          data-aos="flip-up"
+          data-aos-duration="1500"
+          data-aos-once="true"
+        />
+      </div>
+    </div>
+
+    <!-- projects -->
+    <div class="container projects overflow-hidden" id="projects">
+      <div
+        class="p-2 projects__title"
+        data-aos="slide-up"
+        data-aos-duration="1500"
+        data-aos-once="true"
+      >
+        <h2 class="projects__title--primary">My Projects</h2>
+      </div>
+      <div class="projects__content gap-3 mt-3">
+        <div
+          class="card shadow-sm"
+          data-aos="zoom-out-right"
+          data-aos-delay="500"
+          data-aos-duration="1500"
+          data-aos-once="true"
+        >
+          <a
+            class="nav-link text-dark"
+            target="_blank"
+            href="https://github.com/fsembilan/rent-car-v1"
+          >
+            <div class="card-body">
+              <div class="card-title fw-bold fs-4">
+                <i class="bi bi-journal-code"></i> rent-car-v1
+              </div>
+              <div class="card-text">
+                A web-based car rental application that functions to control the
+                outgoing and incoming car schedules.
+              </div>
+
+              <div class="d-flex flex-wrap gap-3 mt-2 fs-5">
+                <span class="badge bg-light text-dark"
+                  ><i class="bi bi-filetype-php"></i> php</span
+                >
+                <span class="badge bg-light text-dark"
+                  ><i class="bi bi-filetype-js"></i> javascript</span
+                >
+                <span class="badge bg-light text-dark"
+                  ><i class="bi bi-filetype-html"></i> html</span
+                >
+                <span class="badge bg-light text-dark"
+                  ><i class="bi bi-filetype-css"></i> css</span
+                >
+              </div>
+            </div>
+          </a>
+        </div>
+        <div
+          class="card shadow-sm"
+          data-aos="zoom-out-left"
+          data-aos-delay="1000"
+          data-aos-duration="1500"
+          data-aos-once="true"
+        >
+          <a
+            class="nav-link text-dark"
+            target="_blank"
+            href="https://github.com/fsembilan/rent-car-v1"
+          >
+            <div class="card-body">
+              <div class="card-title fw-bold fs-4">
+                <i class="bi bi-journal-code"></i> sumberjo-health-center
+              </div>
+              <div class="card-text">
+                A landing page interface design for the Sumberjo Health Center
+                which was built with the bootstrap css framework.
+              </div>
+
+              <div class="d-flex flex-wrap gap-3 mt-2 fs-5">
+                <span class="badge bg-light text-dark"
+                  ><i class="bi bi-filetype-html"></i> html</span
+                >
+                <span class="badge bg-light text-dark"
+                  ><i class="bi bi-filetype-css"></i> css</span
+                >
+                <span class="badge bg-light text-dark"
+                  ><i class="bi bi-bootstrap"></i> bootstrap</span
+                >
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <!-- contact -->
+    <div class="container-fluid contact" id="contact">
+      <div class="contact__content px-4">
+        <div class="contact__content--img">
+          <img
+            src="src/assets/profile.jpg"
+            alt="profile"
+            class="rounded-circle"
+            class="card shadow-sm"
+            data-aos="flip-right"
+            data-aos-delay="500"
+            data-aos-duration="1500"
+            data-aos-once="true"
+          />
+        </div>
+        <div class="contact__content--text">
+          <h2
+            data-aos="fade-right"
+            data-aos-delay="500"
+            data-aos-duration="1500"
+            data-aos-once="true"
+          >
+            Reach Out to me!
+          </h2>
+          <h6
+            data-aos="fade-left"
+            data-aos-delay="1000"
+            data-aos-duration="1500"
+            data-aos-once="true"
+          >
+            DISCUSS A PROJECT OR JUST WANT TO SAY HI? JUST GO!
+          </h6>
+          <p
+            data-aos="zoom-in"
+            data-aos-delay="1500"
+            data-aos-duration="1500"
+            data-aos-once="true"
+          >
+            "College Student | Aspiring Full Stack Software Developer
+            <img
+              alt="🚀"
+              draggable="false"
+              src="https://twemoji.maxcdn.com/2/72x72/1f680.png"
+              style="
+                height: 1em;
+                width: 1em;
+                margin: 0px 0.05em 0px 0.1em;
+                vertical-align: -0.1em;
+              "
+            />
+            | Code Enthusiast"
+          </p>
+          <span
+            data-aos="fade-up"
+            data-aos-delay="1500"
+            data-aos-duration="1500"
+            data-aos-once="true"
+            ><i class="bi bi-geo-alt-fill"></i> Lumajang, Indonesia</span
+          >
+        </div>
+      </div>
+    </div>
+
+    <footer>
+      <div class="text-center text-black-50 py-3">
+        Made with
+        <img
+          alt="love"
+          draggable="false"
+          src="https://twemoji.maxcdn.com/2/72x72/2764.png"
+          style="
+            height: 1em;
+            width: 1em;
+            margin: 0px 0.05em 0px 0.1em;
+            vertical-align: -0.1em;
+          "
+        />
+        by fsembilan
+      </div>
+    </footer>
+
+    <script src="src/libs/aos/aos.js"></script>
+    <script src="src/libs/gsap/gsap.min.js"></script>
+    <script src="src/libs/gsap/TextPlugin.min.js"></script>
+    <script src="src/js/custom.js"></script>
     <script src="./src/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="./src/libs/animejs/anime.min.js"></script>
   </body>
 </html>
